# wgpu-experiments

./: Cargo.toml  README.md  README.rst  learn-wgpu.html
src/: lib.rs  light.rs  main.rs  model.rs  observer.rs  resources.rs  shader.wgsl  texture.rs
src/wgpu_utils/: mod.rs
