[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10"
log = "0.4"
instant = "0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = "0.15.1"
winit = "0.28.2"
cfg-if = "1"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = {version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
	"Document",
	"Window",
	"Element",
]}
